[package]
name = "darknet-sys"
version = "0.1.2"
authors = ["alianse77"]
edition = "2018"
repository = "https://github.com/alianse777/darknet-sys-rust"
license = "MIT"
description = "-sys crate for Rust darknet wrapper"
#documentation = ""
readme = "./README.md"
homepage = "https://github.com/alianse777/darknet-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.51.1"
copy_dir = "0.1.2"
cc = "1.0.50"

