[package]
name = "darknet-sys"
version = "0.2.1"
authors = ["alianse77"]
edition = "2018"
repository = "https://github.com/alianse777/darknet-sys-rust"
license = "MIT"
description = "-sys crate for Rust darknet wrapper"
documentation = "https://docs.rs/darknet-sys/"
readme = "./README.md"
homepage = "https://github.com/alianse777/darknet-rust"

[dependencies]

[build-dependencies]
failure = "^0.1.0"
bindgen = "^0.53.0"
cmake = "^0.1.0"
lazy_static = "^1.4.0"

[features]
buildtime-bindgen = []
runtime = []
link-dynamic = []
