[package]
name = "darknet-sys"
version = "0.3.0"
authors = ["alianse77"]
edition = "2018"
repository = "https://github.com/alianse777/darknet-sys-rust"
license = "MIT"
description = "-sys crate for Rust darknet wrapper"
documentation = "https://docs.rs/darknet-sys/"
readme = "./README.md"
homepage = "https://github.com/alianse777/darknet-rust"

[dependencies]

[build-dependencies]
anyhow = "1.0"
bindgen = "0.55"
cmake = "0.1"
lazy_static = "1.4"

[features]
buildtime-bindgen = []
runtime = []
dylib = []
enable-cuda = []
enable-cudnn = []
enable-opencv = []
docs-rs = []

["package.metadata.docs.rs"]
features = ["docs-rs"]
